--- a/Source/Dematerializer/Dematerializer.csproj
+++ b/Source/Dematerializer/Dematerializer.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -14,59 +14,124 @@
     <TargetFrameworkProfile />
     <LangVersion>8</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>/rimworld/1.2/Mods/Dematerializer/Assemblies</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release v1.2|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutputPath>C:\RimWorld1-2-2900Win64\Mods\Dematerializer\Assemblies</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>RIMWORLD12</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <OutputPath>/rimworld/1.2/Mods/Dematerializer/1.2/Assemblies</OutputPath>
+    <MainPath>/tmp/rimworld/1.2/Mods/Dematerializer/1.2/Assemblies</MainPath>
   </PropertyGroup>
-  <ItemGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release v1.3|AnyCPU' ">
+    <DefineConstants>RIMWORLD13</DefineConstants>
+    <OutputPath>/rimworld/1.3/Mods/Dematerializer/1.3/Assemblies</OutputPath>
+    <MainPath>/rimworld/1.2/Mods/Dematerializer/1.3/Assemblies</MainPath>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release v1.4|AnyCPU' ">
+    <DefineConstants>RIMWORLD14</DefineConstants>
+    <OutputPath>/rimworld/1.4/Mods/Dematerializer/1.4/Assemblies</OutputPath>
+    <MainPath>/rimworld/1.2/Mods/Dematerializer/1.4/Assemblies</MainPath>
+  </PropertyGroup>
+  <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release v1.2|AnyCPU' ">
     <Reference Include="Assembly-CSharp, Version=1.2.7528.19748, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\..\..\rimworld\1.2\RimWorldLinux_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\..\..\rimworld\1.2\RimWorldLinux_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\..\..\rimworld\1.2\RimWorldLinux_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release v1.3|AnyCPU' ">
+    <Reference Include="Assembly-CSharp, Version=1.3.7967.28253, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\..\..\rimworld\1.3\RimWorldLinux_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\..\..\rimworld\1.3\RimWorldLinux_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\..\..\rimworld\1.3\RimWorldLinux_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release v1.4|AnyCPU' ">
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\..\..\..\rimworld\1.4\RimWorldLinux_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\..\..\rimworld\1.4\RimWorldLinux_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\..\..\rimworld\1.4\RimWorldLinux_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+  </ItemGroup>
+
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dematerializer\Building_Dematerializer.cs" />
     <Compile Include="Dematerializer\ITab_DematerializerBuffer_Inventory.cs" />
     <Compile Include="Dematerializer\PlaceWorker_OnlyOneBuilding.cs" />
     <Compile Include="Dematerializer\PlaceWorker_OnlyOneDematerializer.cs" />
-    <Compile Include="Dematerializer\Saving\Dialog\Dialog_LoadPreset.cs" />
-    <Compile Include="Dematerializer\Saving\Dialog\Dialog_Preset.cs" />
-    <Compile Include="Dematerializer\Saving\Dialog\Dialog_SavePreset.cs" />
-    <Compile Include="Dematerializer\Saving\SaveThings.cs" />
     <Compile Include="Dematerializer\DematerializerBuffer.cs" />
     <Compile Include="Dematerializer\DematerializerThingDef.cs" />
     <Compile Include="Utilities\FindingThings.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition=" '$(OS)' != 'Windows_NT' ">
+    <PropertyGroup>
+      <FilesSource>$(ProjectDir)..\..\Dematerializer</FilesSource>
+      <FilesDestination>$(OutputPath)..</FilesDestination>
+    </PropertyGroup>
+    <Exec Command="cp -rvf $(FilesSource)/* '$(FilesDestination)/../'" />
+    <Exec Command="cp '$(FilesSource)/../README.md' '$(FilesDestination)/../'" />
+    <Exec Command="mkdir -p '$(MainPath)'" />
+    <Exec Command="cp -vf $(OutputPath)* '$(MainPath)/'" />
+    <Exec Command="unix2dos '$(FilesDestination)/../README.md'" />
+    <!--
+    <Error Condition=" '$(FilesDestination)' == '' " Text="Lib not delivered. To disable this message, remove the 'Target' tag from the project file" />
+    <Exec Command="RD /S /Q &quot;$(FilesDestination)&quot;" />
+    <Exec Command="XCOPY &quot;$(FilesSource)&quot; &quot;$(FilesDestination)&quot; /E /I /H /R /K /Y" />
+    <Exec Command="RD /S /Q &quot;$(FilesSource)&quot;" />
+    -->
+  </Target>
+  <!-- cp -rvf '/code/Rimworld/Dematerializer/Source/Dematerializer/../../Dematerializer/*' '/rimworld/1.2/Mods/Dematerializer/Assemblies/..'" exited with code 1.
+  To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
